konga-home-page

--- a/css/style.css
+++ b/css/style.css
@@ -731,9 +731,9 @@ footer .last ul {
     overflow-x: scroll;
   }
 
-  .third-main {
+  /* .third-main {
     overflow-x: scroll;
-  }
+  } */
   .main-forth-section {
     overflow-x: scroll;
   }
