--- a/css/style.css
+++ b/css/style.css
@@ -826,9 +826,14 @@ footer .last ul {
 
   .mobil-footer-section .mobil-footer-links {
     display: flex;
+    justify-content: center;
     background-color: #fff;
     margin-top: 13%;
-    margin-left: 8%;
+  }
+  .mobil-footer-links a {
+    /* text-align: center; */
+    /* padding: 12px; */
+    margin: 8%;
   }
   .mobil-footer-section a {
     color: grey;
@@ -838,8 +843,10 @@ footer .last ul {
     color: grey;
     font-size: 20px;
   }
-  .mobil-last-links {
+  .mobil-last-link {
     width: 100%;
     margin: 8%;
+    margin-top: 10px;
+    margin-bottom: 5px;
   }
 }
